Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.1
  FEATURES:
    * Saved playlists and folders can now be deleted with the keyboard.
    * Added "Copy on Write" when trying to edit a read only (one of the 
      default) playlist layouts. The changed layout is now simply saved under 
      a new name. 
    * Added bookmarks to the context view, allowing saving and restoring of 
      applet setups.
    * Enhanced --debug feature: When a function takes very long to run (> 5s),
      we print a special message (GREPME) that can be searched easily.
    * Middle-clicking an item in the Collection Browser appends it to the
      playlist. Patch by Felix Geyer <debfx-kde@fobos.de>. (BR 197423)
    * Added feature for removing duplicates from the playlist. Patch by John
      Atkinson <john@fauxnetic.co.uk>. (BR 200445)
    * Allow changing of playlist layout item sizes using the inline editor.
    * Initial KNotify support.
    * Show total playlist file size in a tooltip when hovering over the total
      play list time. (BR 91640)
    * Implemented Jump To. Press Ctrl+J to focus the playlist search.
      (BR 92400)
    * Made Love/Skip/Ban/Enqueue/Dequeue available in Shortcuts configuration
      dialog. (BR 136232, BR 187542)

  CHANGES:
    * Renamed "Browsers" panel to more suited "Content" panel.
    * Improvements to the row heights in the playlist, making especially the
      size of the rating stars more consistent.
    * Usability improvements in the Context View's applet tab bar.
    * Collection scanner won't scan a directory more than once if passed in
      multiple times. Should significantly speed up certain incremental
      scanning cases.
    * When doing a recursive incremental scan, the scanner will no longer scan
      subdirectories of changed directories if those subdirectories' mtimes
      have not changed, for extremely large speedups in some cases. For very